--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,11 @@
             <artifactId>winrun4j</artifactId>
             <version>0.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>info.growl</groupId>
+            <artifactId>libgrowl</artifactId>
+            <version>0.2</version>
+        </dependency>
     </dependencies>
     <pluginRepositories>
         <pluginRepository>
@@ -295,14 +300,21 @@
     </pluginRepositories>
     <build>
         <sourceDirectory>src/java</sourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
